k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.fullcycle.com.br
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: goserver-service
              port:
                number: 80
